# airhockey

./: CMakeLists.txt  README.md
res/: sample.fs  sample.vs
res/Models/field/: field.mtl
res/Models/obstacle/: obstacle (copy 1).mtl  obstacle.blend  obstacle.blend1
res/Models/obstacleY/: obstacle.mtl
res/Models/player1/: player.blend  player.blend1  player.mtl
res/Models/player2/: player.mtl
res/Models/test/: test.mtl
res/Shaders/test/: sample.fs  sample.vs
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Physics.cpp  Physics.h  Playstate.cpp  Playstate.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Transform.cpp  Transform.h  main.cpp  mesh.h  model.h
